--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@types/styled-components": "^5.1.15",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "recharts": "^2.1.6",
+    "request": "^2.88.2",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -30,7 +37,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "server": "nodemon ./server"
   },
   "eslintConfig": {
     "extends": [
@@ -51,7 +59,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "nodemon": "^2.0.15"
   },
   "homepage": "https://gron1gh1.github.io/db-covid-map/"
 }
