--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.2",
@@ -24,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "recharts": "^2.1.6",
+    "recoil": "^0.5.2",
     "request": "^2.88.2",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
